--- a/android/res/layout/activity_main.xml
+++ b/android/res/layout/activity_main.xml
@@ -6,9 +6,38 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin" >
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
-
+    <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="textEmailAddress"
+            android:ems="10"
+            android:hint="@string/hint_email_address"
+            android:id="@+id/login_email_address_edittext" android:layout_alignParentTop="true" android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" android:layout_marginTop="59dp"
+            android:layout_alignParentRight="true" android:layout_alignParentEnd="true"/>
+    <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="textPassword"
+            android:ems="10"
+            android:hint="@string/hint_password"
+            android:id="@+id/login_password_edittext" android:layout_below="@+id/login_email_address_edittext"
+            android:layout_marginTop="46dp"
+            android:layout_alignParentRight="true" android:layout_alignParentEnd="true"
+            android:layout_alignParentLeft="true" android:layout_alignParentStart="true"/>
+    <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/register"
+            android:id="@+id/register_button" android:layout_centerVertical="true" android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"/>
+    <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/login"
+            android:id="@+id/login_button" android:layout_alignTop="@+id/register_button" android:layout_alignRight="@+id/login_password_edittext"
+            android:layout_alignEnd="@+id/login_password_edittext"/>
+    <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/forget_password"
+            android:layout_marginBottom="60dp" android:layout_alignParentBottom="true"
+            android:gravity="center_horizontal" android:id="@+id/forget_password_textview"/>
 </RelativeLayout>
