--- a/android/res/layout/acitivity_register.xml
+++ b/android/res/layout/acitivity_register.xml
@@ -39,6 +39,7 @@
             android:id="@+id/security_question_spinner"
             android:layout_marginTop="47dp" android:layout_below="@+id/register_phonenumber_textedit"
             android:entries="@array/security_questions"
+            android:prompt="@string/choose_security_question"
             android:layout_alignParentLeft="true" android:layout_alignParentStart="true"/>
     <EditText
             android:layout_width="wrap_content"
